[project]
name = "sentinelcase"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "pyjwt>=2.9",
  "passlib[bcrypt]>=1.7",
  "redis>=5.0",
  "rq>=1.16",
  "email-validator>=2.2"
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
